--- a/conf.yml
+++ b/conf.yml
@@ -1,7 +1,13 @@
-user-url:          "https://git.tar.black/{username}/pronounce_config/-/raw/main/conf.yml"
+title:        "{username}'s pronounce page"
+icon:         "favicon.png"
+user-url:     "https://git.tar.black/{username}/pronounce_config/-/raw/main/conf.yml"
 
 colors:
   background: "#0e0e0eff"
   foreground: "#eeeeeeff"
   heading:    "#555555ff"
-  error:      "#eeeeeecc"
+  text:       "#eeeeeecc"
+
+  url:
+    normal:   "#eeeeee9d"
+    hover:    "#eeeeeeb9"
