--- a/conf.yml
+++ b/conf.yml
@@ -1,6 +1,6 @@
 title:        "{username}'s pronounce page"
 icon:         "favicon.png"
-user-url:     "https://git.tar.black/{username}/pronounce_config/-/raw/main/conf.yml"
+user-url:     "https://raw.githubusercontent.com/{username}/{username}/main/pronounce.yml"
 
 colors:
   background: "#0e0e0eff"
